Criação do arquivo parquet

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,11 @@
 
 # Arquivo full
 .tmp
-measurements*
+measurements1M.txt
+measurements10M.txt
+measurements100M.txt
+measurements.txt
+
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
